header responsive editing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="top">
         <div class="container">
           <div class="row all d-flex justify-content-between ">
-            <div class="col-xl-3  col-7 col-sm-7 col-md-6 USD">
+            <div class="col-xl-3 col-lg-6 col-7 col-sm-7 col-md-6 USD">
               <div class="left">
                 <a href="">US/USD<i class="fa-solid fa-caret-down"></i></a>
               </div>
@@ -30,7 +30,7 @@
                 ></a>
               </div>
             </div>
-            <div class=" col-xl-2  col-4  col-sm-4  col-md-5 social-media">
+            <div class=" col-xl-2  col-lg-6 col-4  col-sm-4  col-md-5 social-media">
               <a href=""><i class="fa-brands fa-facebook"></i></a>
               <a href=""> <i class="fa-brands fa-twitter"></i></a>
               <a href=""> <i class="fa-brands fa-viber"></i> </a>
@@ -42,10 +42,10 @@
       <section class="mid">
         <div class="container">
           <div class="row all">
-            <div class="col-xl-3  mid-img">
+            <div class="col-xl-3 col-lg-3 mid-img">
               <a href=""><img src="assets/images/logo (1).png" alt="" /></a>
             </div>
-            <div class="col-xl-7  col-md-8 inputs">
+            <div class="col-xl-7 col-lg-7 col-md-8 inputs">
               <input
                 type="text"
                 name="s"
@@ -92,7 +92,7 @@
                 </svg>
               </button>
             </div>
-            <div class="col-xl-2  col-md-4 svgs">
+            <div class="col-xl-2 col-lg-2  col-md-4 svgs">
               <div class="svg-user">
                 <svg
                   class="svgUser1"
@@ -167,15 +167,15 @@
       </section>
       <section class="buttom">
         <div class="container">
-          <div class="row">
-            <div class="col-xl-4 left-categories">
+          <div class="row all-buttom">
+            <div class="col-xl-3 col-lg-3 left-categories">
               <a href="#" class="button-all-categories"
                 ><i class="fas fa-bars"></i>ALL CATEGORIES<i
                   class="fas fa-angle-down"
                 ></i
               ></a>
             </div>
-            <div class="col-xl-8  right-categories">
+            <div class="col-xl-9 col-lg-9 right-categories">
                 <a href=""> HOME <i class="fas fa-angle-down" ></i </a>
                 <a href="">CATEGORIES <i class="fas fa-angle-down" ></i </a>
                 <a href="">SHOP  <i class="fas fa-angle-down" ></i </a>
