Added functionality some parts

--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
         <div class="container">
           <div class="row all d-flex justify-content-between ">
             <div class="col-xl-3 col-lg-6 col-7 col-sm-7 col-md-6 USD">
-              <div class="left">
+              <div  id="money"  class="left">
                 <a href="">US/USD<i class="fa-solid fa-caret-down"></i></a>
+                <div class="money-change">
+                   <p>AUS/USD</p>
+                   <p>BNG/TK</p>
+                   <p>IN/RP</p>
+                </div>
               </div>
               <div class="right">
-                <a href=""
+                <a id="sell-with-us" href=""
                   >Sell With Us<i class="fa-solid fa-caret-down"></i
                 ></a>
+                <div class="sell-with-us">
+                   <p>Returns</p>
+                   <p>Privacy</p>
+                   <p>Terms</p>
+                </div>
               </div>
             </div>
             <div class=" col-xl-2  col-lg-6 col-4  col-sm-4  col-md-5 social-media">
