detail page created and added

--- a/index.html
+++ b/index.html
@@ -534,17 +534,19 @@
         <div class="row all">
           <div class="col-lg-5">
             <div class="row">
-              <div  id="offer" class="col-lg-8"><span>EXSCLUSIVE OFFER</span>
+              <div id="offer" class="col-lg-8"><span>EXSCLUSIVE OFFER</span>
                 <h2>SMART WATCH BRACELET</h2>
               </div>
               <div class="col-lg-4">
                 <img src="assets/images/footer-70.png" alt="">
               </div>
             </div>
-            
+
           </div>
           <div class="col-lg-3">
-            <a href="">LIMITED TIME OFFER</a><span id="upto" >UPTO</span><span id="amount">$50.00</span><span id="off">OFF</span></div>
+            <a href="">LIMITED TIME OFFER</a><span id="upto">UPTO</span><span id="amount">$50.00</span><span
+              id="off">OFF</span>
+          </div>
         </div>
       </div>
     </section>
