login page creted

--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
             </button>
           </div>
           <div class="col-xl-2 col-lg-2  col-md-4 svgs">
-            <div class="svg-user">
-              <svg class="svgUser1" width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                <path d="m16 16a7 7 0 1 0 -7-7 7 7 0 0 0 7 7zm0-12a5 5 0 1 1 -5 5 5 5 0 0 1 5-5z"></path>
-                <path
-                  d="m20 18h-8a9 9 0 0 0 -9 9 3 3 0 0 0 3 3h20a3 3 0 0 0 3-3 9 9 0 0 0 -9-9zm6 10h-20a1 1 0 0 1 -1-1 7 7 0 0 1 7-7h8a7 7 0 0 1 7 7 1 1 0 0 1 -1 1z">
-                </path>
-              </svg>
-            </div>
+            <a href="login.html">
+              <div class="svg-user">
+                <svg class="svgUser1" width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m16 16a7 7 0 1 0 -7-7 7 7 0 0 0 7 7zm0-12a5 5 0 1 1 -5 5 5 5 0 0 1 5-5z"></path>
+                  <path
+                    d="m20 18h-8a9 9 0 0 0 -9 9 3 3 0 0 0 3 3h20a3 3 0 0 0 3-3 9 9 0 0 0 -9-9zm6 10h-20a1 1 0 0 1 -1-1 7 7 0 0 1 7-7h8a7 7 0 0 1 7 7 1 1 0 0 1 -1 1z">
+                  </path>
+                </svg>
+              </div>
+            </a>
+            
             <div class="svgCompare">
               <svg class="svgCompare" width="20" height="20" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -165,7 +168,7 @@
           <div class="col-xl-9 col-lg-9 right-categories">
             <div id="" class="home-cataloge-1">
               <div class="home-cataloge-3">
-                <a href="#"> HOME <i class="fas fa-angle-down"></i </a>
+                <a href="index.html"> HOME <i class="fas fa-angle-down"></i </a>
               </div>
 
               <div class="home-cataloge-2 ">
@@ -256,7 +259,7 @@
             </div>
             <div class="shop-categories-1">
               <div class="shop-categories-3">
-                <a href="">SHOP <i class="fas fa-angle-down"></i </a>
+                <a href="shop.html">SHOP <i class="fas fa-angle-down"></i </a>
               </div>
 
               <div class="shop-categories-2">
