adding local api

--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
     </section>
     <section id="products-index-html">
       <div class="container">
-        <div class="row">
-          <div class="col-xl-2-5 product-items">
+        <div  id="seymur-yek" class="row">
+          <!-- <div class="col-xl-2-5 product-items">
             <img src="assets/images/index-img-1.jpg" alt="">
             <a href="">Apple 256GB</a>
             <p>US $240.00 <span>|</span><span>{ 4% off }</span></p>
@@ -863,7 +863,7 @@
                 <button>ADD TO CART</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -2045,6 +2045,7 @@
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/jquery.nice-select.js"></script>
+  <script src="assets/js/api.js"></script>
   <script src="assets/js/main.js"></script>
   <script>
     // init Isotope
