--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </svg>
               </div>
             </a>
-            
+
             <div class="svgCompare">
               <svg class="svgCompare" width="20" height="20" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -132,7 +132,7 @@
                   d="m26 8.9a1 1 0 0 0 -1-.9h-3a6 6 0 0 0 -12 0h-3a1 1 0 0 0 -1 .9l-1.78 17.8a3 3 0 0 0 .78 2.3 3 3 0 0 0 2.22 1h17.57a3 3 0 0 0 2.21-1 3 3 0 0 0 .77-2.31zm-10-4.9a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4zm9.53 23.67a1 1 0 0 1 -.74.33h-17.58a1 1 0 0 1 -.74-.33 1 1 0 0 1 -.26-.77l1.7-16.9h2.09v3a1 1 0 0 0 2 0v-3h8v3a1 1 0 0 0 2 0v-3h2.09l1.7 16.9a1 1 0 0 1 -.26.77z">
                 </path>
               </svg>
-              <div class="svg-shopBag-span">
+              <div id="basket-count" class="svg-shopBag-span">
                 <span>0</span>
               </div>
             </div>
@@ -553,7 +553,7 @@
     </section>
     <section id="products-index-html">
       <div class="container">
-        <div  id="seymur-yek" class="row">
+        <div id="index-product-1" class="row">
           <!-- <div class="col-xl-2-5 product-items">
             <img src="assets/images/index-img-1.jpg" alt="">
             <a href="">Apple 256GB</a>
@@ -2040,13 +2040,13 @@
   <script src="assets/js/isotope.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/jquery.nice-select.js"></script>
-  <script src="assets/js/api.js"></script>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/api.js"></script>  
+  <script src="assets/js/main.js" ></script>
   <script>
     // init Isotope
     var $grid = $('.items-details-isotope').isotope({
