--- a/cart.html
+++ b/cart.html
@@ -608,7 +608,7 @@
                                         <button>APPLY COUPON</button>
                                     </div>
                                     <div class="col-xl-3 m-3 ">
-                                        <button disabled  id="uptade" >UPTADE CART</button>
+                                        <button  onclick="editSubtotal(event)" id="uptade" >UPTADE CART</button>
                                     </div>
                                 </div>
                             </div>
