addin shop.html dinamism

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             </div>
 
             <div class="shopBag">
-              <svg class="shopBag" width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+              <a href="cart.html"><svg class="shopBag" width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="m26 8.9a1 1 0 0 0 -1-.9h-3a6 6 0 0 0 -12 0h-3a1 1 0 0 0 -1 .9l-1.78 17.8a3 3 0 0 0 .78 2.3 3 3 0 0 0 2.22 1h17.57a3 3 0 0 0 2.21-1 3 3 0 0 0 .77-2.31zm-10-4.9a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4zm9.53 23.67a1 1 0 0 1 -.74.33h-17.58a1 1 0 0 1 -.74-.33 1 1 0 0 1 -.26-.77l1.7-16.9h2.09v3a1 1 0 0 0 2 0v-3h8v3a1 1 0 0 0 2 0v-3h2.09l1.7 16.9a1 1 0 0 1 -.26.77z">
                 </path>
-              </svg>
+              </svg></a>
               <div class="svg-shopBag-span">
                 <span id="basket-count">0</span>
               </div>
@@ -649,8 +649,8 @@
                     <li>Total Sold:11</li>
                     <li>Stock:19</li>
                   </ul>
-                  <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 10% ; height:5px"></div>
+                  <div style="height: 5px;" class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 10% ;"></div>
                   </div>
                   <p><span>Hurry Up</span> Limited Time Offer</p>
                   <div class="coming-time"
@@ -666,7 +666,7 @@
                     <li>Total Sold:11</li>
                     <li>Stock:19</li>
                   </ul>
-                  <div class="progress">
+                  <div style="height: 5px;" class="progress">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 5% ; height:5px"></div>
                   </div>
                   <p><span>Hurry Up</span> Limited Time Offer</p>
@@ -684,7 +684,7 @@
                     <li>Total Sold:11</li>
                     <li>Stock:19</li>
                   </ul>
-                  <div class="progress">
+                  <div style="height: 5px;" class="progress">
                     <div class="progress-bar bg-warning" role="progressbar" style="width: 15% ; height:5px"></div>
                   </div>
                   <p><span>Hurry Up</span> Limited Time Offer</p>
@@ -779,12 +779,7 @@
               <div class="row">
                 <div class="col-xl-12">
                   <div class="button-group filter-button-group" id="bestSellingCategories">
-                    <button data-filter="*">ALL</button>
-                    <!-- <button data-filter=".GAMING">GAMING</button>
-                    <button data-filter=".ACCESSORIES">ACCESSORIES</button>
-                    <button data-filter=".FEATURED">FEATURED</button>
-                    <button data-filter=".HOT-SELL">HOT SELL</button>
-                    <button data-filter=".TREND">TREND</button> -->
+                    <button data-filter="*">ALL</button>                    
                   </div>
                   <div class="items-details-isotope" id="bestSellingProducts">         
                
