--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
       </div>
     </section>
-    <section class="buttom">
+    <section  id="header-buttom-part" class="buttom">
       <div class="container">
         <div class="row all-buttom">
           <div class="col-xl-3 col-lg-3 left-categories">
@@ -467,7 +467,7 @@
 
 
             <div class="contact-categories-1">
-              <a href="">CONTACT </a>
+              <a href="contact.html">CONTACT </a>
             </div>
 
 
@@ -817,7 +817,7 @@
         <div class="last-news-buttom">
           <div class="row">
             <div class="col-xl-4">
-              <img src="assets/images/main-last-news-uptade.jpg" alt="">
+              <img src="assets/images/last-news/main-last-news-uptade.jpg" alt="">
               <h4>Technology series-11 Controller</h4>
               <i class="fa-solid fa-user"></i><a href="">Admin</a><i class="fa-solid fa-calendar-days"></i><a href="">04
                 MAY</a>
@@ -826,8 +826,8 @@
               <a id="read-more" href="">Read More</a>
             </div>
             <div class="col-xl-4">
-              <img src="assets/images/main-last-news-uptade.jpg" alt="">
-              <h4>Technology series-11 Controller</h4>
+              <img src="assets/images/last-news/venam-blog-2-768x512.jpg" alt="">
+              <h4>Technology series-10 Playstation</h4>
               <i class="fa-solid fa-user"></i><a href="">Admin</a><i class="fa-solid fa-calendar-days"></i><a href="">04
                 MAY</a>
               <p>Namkand sodales vel online best prices Amazon Check out ethnic wear, formal wear western wear Blood
@@ -835,8 +835,8 @@
               <a id="read-more" href="">Read More</a>
             </div>
             <div class="col-xl-4">
-              <img src="assets/images/main-last-news-uptade.jpg" alt="">
-              <h4>Technology series-11 Controller</h4>
+              <img src="assets/images/last-news/venam-blog-3.jpg" alt="">
+              <h4>Technology series-9 Game</h4>
               <i class="fa-solid fa-user"></i><a href="">Admin</a><i class="fa-solid fa-calendar-days"></i><a href="">04
                 MAY</a>
               <p>Namkand sodales vel online best prices Amazon Check out ethnic wear, formal wear western wear Blood
