--- a/login.html
+++ b/login.html
@@ -129,12 +129,12 @@
                         </div>
 
                         <div class="shopBag">
-                            <svg class="shopBag" width="20" height="20" viewBox="0 0 32 32"
+                            <a href="cart.html"><svg class="shopBag" width="20" height="20" viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="m26 8.9a1 1 0 0 0 -1-.9h-3a6 6 0 0 0 -12 0h-3a1 1 0 0 0 -1 .9l-1.78 17.8a3 3 0 0 0 .78 2.3 3 3 0 0 0 2.22 1h17.57a3 3 0 0 0 2.21-1 3 3 0 0 0 .77-2.31zm-10-4.9a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4zm9.53 23.67a1 1 0 0 1 -.74.33h-17.58a1 1 0 0 1 -.74-.33 1 1 0 0 1 -.26-.77l1.7-16.9h2.09v3a1 1 0 0 0 2 0v-3h8v3a1 1 0 0 0 2 0v-3h2.09l1.7 16.9a1 1 0 0 1 -.26.77z">
                                 </path>
-                            </svg>
+                            </svg></a>
                             <div class="svg-shopBag-span">
                                 <span>0</span>
                             </div>
@@ -471,7 +471,7 @@
 
 
                         <div class="contact-categories-1">
-                            <a href="">CONTACT </a>
+                            <a href="contact.html">CONTACT </a>
                         </div>
 
 
