fixed bug added some parts

--- a/cart.html
+++ b/cart.html
@@ -138,14 +138,14 @@
                                 </path>
                             </svg></a>
                             <div  class="svg-shopBag-span">
-                                <span id="basket-count" >0</span>
+                                <span id="basket-count-1" >0</span>
                               </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="buttom">
+        <section  id="header-buttom-part" class="buttom">
             <div class="container">
                 <div class="row all-buttom">
                     <div class="col-xl-3 col-lg-3 left-categories">
