--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </section>
-        <section class="buttom">
+        <section id="header-buttom-part" class="buttom">
             <div class="container">
                 <div class="row all-buttom">
                     <div class="col-xl-3 col-lg-3 left-categories">
