--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
     </section>
   </header>
   <main>
+    <a  id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
     <section id="slider">
       <div class="container">
         <div class="sliders  col-12">
@@ -992,9 +993,36 @@
   <script src="assets/js/jquery.nice-select.js"></script>
   <script src="assets/js/api.js"></script>
   <script src="assets/js/main.js"></script>
+  <script>setIsotope()</script>
  
   <script>
-  
+  var x = setInterval(function () {
+        var countDownDate = new Date("Sep 5, 2022 15:37:25").getTime();
+
+      // Get today's date and time
+      var now = new Date().getTime();
+
+      // Find the distance between now and the count down date
+      var distance = countDownDate - now;
+
+      // Time calculations for days, hours, minutes and seconds
+      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      // Display the result in the element with id="demo"
+      document.getElementById("day").innerHTML = days;
+      document.getElementById("hour").innerHTML = hours;
+      document.getElementById("min").innerHTML = minutes;
+      document.getElementById("sec").innerHTML = seconds;
+
+      // If the count down is finished, write some text
+      if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("demo").innerHTML = "EXPIRED";
+      }
+    }, 1000);  
   </script>
 </body>
 
