fixed some parts

--- a/index.html
+++ b/index.html
@@ -503,20 +503,20 @@
     <a  id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
     <section id="slider">
       <div class="container">
-        <div class="sliders  col-12">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="slider-content">
+        <div class="sliders  col-xl-12">
+          <div class=" all d-flex justify-content-between align-items-center">
+            <div class="slider-content col-xl-6 ">
               <h5>BEST DEAL !</h5>
               <h2>SMART TV BRACELET</h2>
               <p>Get up to <span>50%</span> off Today Only </p>
               <a href="#0" target="_blank" class="thm-btn btn btn-icon-right" data-animation="" data-delay="1s"
                 tabindex="0">Shop Now </a>
             </div>
-            <div class="slider-image text-end">
+            <div class="slider-image text-end col-xl-6 ">
               <img src="assets/images/image-slider.png" alt="">
             </div>
           </div>
-          <div class="d-flex justify-content-between align-items-center">
+          <div class=" all d-flex justify-content-between align-items-center">
             <div class="slider-content">
               <h5>BEST DEAL !</h5>
               <h2>SMART WATCH BRACELET</h2>
@@ -534,9 +534,9 @@
     <section id="super-deals">
       <div class="container">
         <div class="row">
-          <div class="col-xl-10 left-supers-deals">
+          <div class="col-xl-10 col-12 left-supers-deals">
             <h3 class="c-title">Super Deals <span>End in</span></h3>
-            <div class="coming-time"
+            <div class="coming-time col-12"
               data-countdown="{&quot;date&quot;:&quot;2030/01/01&quot;,&quot;hr&quot;:&quot;Hr&quot;,&quot;min&quot;:&quot;Min&quot;,&quot;sec&quot;:&quot;Sec&quot;}">
               <div class="time-count day"><span id="day">0</span>Day</div>
               <div class="time-count hour"><span id="hour">08</span>Hr</div>
@@ -710,10 +710,10 @@
           <div class="row">
             <div class="col-xl-3">
               <div class="row">
-                <div class="col-xl-9">
+                <div class="col-xl-9 ">
                   <h4>Featured Products</h4>
                 </div>
-                <div class="col-xl-3">
+                <div class="col-xl-3 ">
                   <a href="">View All</a>
                 </div>
               </div>
@@ -775,8 +775,8 @@
         </div>
         <div class="buttom">
           <div class="row">
-            <div class="col-xl-4"><img src="assets/images/best-selling-products.png" alt=""></div>
-            <div class="col-xl-8">
+            <div class="col-xl-4 img "><img src="assets/images/best-selling-products.png" alt=""></div>
+            <div class="col-xl-8 col-12 ">
               <div class="row">
                 <div class="col-xl-12">
                   <div class="button-group filter-button-group" id="bestSellingCategories">
@@ -856,10 +856,10 @@
         <div class="row all">
           <div class="col-lg-5">
             <div class="row ">
-              <div id="offer" class="col-lg-8 text-end"><span>EXSCLUSIVE OFFER</span>
+              <div id="offer" class="col-lg-8 col-12 text-end"><span>EXSCLUSIVE OFFER</span>
                 <h2>SMART WATCH BRACELET</h2>
               </div>
-              <div class="col-lg-4">
+              <div  id="img-footer-70" class="col-lg-4 col-12 ">
                 <img src="assets/images/footer-70.png" alt="">
               </div>
             </div>
