adding fully responsive ands tooltips

--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
     <section id="super-deals">
       <div class="container">
         <div class="row">
-          <div class="col-xl-10 col-12 left-supers-deals">
-            <h3 class="c-title">Super Deals <span>End in</span></h3>
-            <div class="coming-time col-12"
+          <div class="col-xl-10 col-12   left-supers-deals">
+            <h3 class="c-title d-inline ">Super Deals <span>End in</span></h3>
+            <div class="coming-time col-12  "
               data-countdown="{&quot;date&quot;:&quot;2030/01/01&quot;,&quot;hr&quot;:&quot;Hr&quot;,&quot;min&quot;:&quot;Min&quot;,&quot;sec&quot;:&quot;Sec&quot;}">
               <div class="time-count day"><span id="day">0</span>Day</div>
               <div class="time-count hour"><span id="hour">08</span>Hr</div>
