--- a/shop.html
+++ b/shop.html
@@ -487,7 +487,7 @@
         <section class="header-phone">
             <div class="container-sm">
                 <div class="row d-flex justify-content-between all-phone-header ">
-                    <div class="col-5"><img src="assets/images/phone-header.png" alt=""></div>
+                    <div class="col-5"><a href="index.html"><img src="assets/images/phone-header.png" alt=""></a></div>
                     <div class="col-5 d-flex justify-content-end"><i class="fa-solid fa-bars"></i></div>
                 </div>
             </div>
@@ -519,7 +519,7 @@
         <section id="shop-modern-tecnology">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3">
+                    <div id="shop-left-filters" class="col-xl-3">
                         <div class="product-categories">
                             <h6>Product Categories</h6>
                             <ul>
@@ -615,10 +615,10 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-9">
+                    <div class="col-xl-9 col-12">
                         <div class="right-modern">
                             <div class="row">
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 col-12">
 
                                     <p>BUILD WITH ELEMENTOR</p>
                                     <h3>Modern Technology Products</h3>
@@ -631,7 +631,7 @@
 
 
                                 </div>
-                                <div class="col-xl-6">
+                                <div id="photo-right-shop-filters" class="col-xl-6">
                                     <img src="assets/images/shop-page/modern-technalogy.jpg" alt="">
                                 </div>
                             </div>
@@ -993,7 +993,7 @@
                             <div class="container">
                                 <div class="top">
                                     <div class="row">
-                                        <div class="col-xl-4">
+                                        <div class="col-xl-4 col-12">
                                             <div class="row">
                                                 <div class="col-xl-9">
                                                     <h4>Featured </h4>
@@ -1063,7 +1063,7 @@
 
 
                                 </div>
-                                <div class="col-xl-6">
+                                <div  id="right-modern-button-img" class="col-xl-6">
                                     <img src="assets/images/shop-page/modern-technology-2.jpg" alt="">
                                 </div>
                             </div>
