--- a/cart.html
+++ b/cart.html
@@ -506,6 +506,7 @@
         </section>
     </header>
     <main>
+        <a  id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
         <section id="cart-top-part">
             <div class="container">
                 <div class="row">
