--- a/contact.html
+++ b/contact.html
@@ -506,6 +506,7 @@
         </section>
     </header>
     <main>
+        <a  id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
         <section id="login-my-accaunt">
             <h2>CONTACT US</h2>
             <ul>
@@ -543,7 +544,7 @@
             <div class="buttom-message">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xl-6 ">
+                        <div class="col-xl-6  col-12">
                             <div class="first-name d-inline position-relative "><input placeholder="First Name*" type="text"><i class="fa-solid fa-user position-absolute"></i></div>
                             <div class="last-name d-inline position-relative "><input placeholder="Last Name*" type="text"><i class=" position-absolute fa-solid fa-user position-absolute"></i> </div>
                             <div class="e-mail d-inline position-relative "><input placeholder="Your Email*" type="e-mail"><i class=" position-absolute fa-solid fa-envelope"></i></div>
@@ -552,10 +553,10 @@
                             <button>Submit</button>
 
                         </div>
-                        <div class="col-xl-6">
+                        <div class="col-xl-6 col-12">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49341.161284772585!2d49.210810054617845!3d39.382892451503636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4024affcd2bdef57%3A0xad29be7dd0adeff1!2zTmVmdMOnYWxhIFBhcmvEsSwgSGV5ZMmZciDGj2xpeWV2LCBOZWZ0w6dhbGEgNDcwMCwgQXplcmJhaWphbg!5e0!3m2!1sen!2s!4v1659024362744!5m2!1sen!2s"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
