--- a/detail.html
+++ b/detail.html
@@ -513,11 +513,11 @@
       <div class="detail-product">
         <div class="container">
 
-          <diw class="d-flex">
-            <div class="col-xl-6 left-product">
+          <diw class="row">
+            <div class="col-xl-6 col-12 left-product">
               <i class="fa-solid fa-magnifying-glass"></i>
 
-              <div class="main ">
+              <div class="main col-12 ">
 
                 <div class="slider slider-for">
                   <div><img src="assets/images/detail-product-big-img.jpg" alt=""></div>
@@ -526,7 +526,7 @@
                   <div> <img src="assets/images/product-detail-big-4.jpg" alt=""> </div>
 
                 </div>
-                <div class="slider slider-nav">
+                <div class="slider slider-nav col-12">
                   <div> <img src="assets/images/detail-product-nob-bar.jpg" alt=""> </div>
                   <div> <img src="assets/images/product-detail-small-2.jpg" alt=""> </div>
                   <div> <img src="assets/images/product-detail-img-small-3.jpg" alt=""> </div>
@@ -534,7 +534,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-6 right-product ">
+            <div class="col-xl-6 col-12 right-product ">
               <div class="row justify-content-between shop-product-top">
                 <div class="col-xl-4">
                   <span>19 in stock</span>
@@ -942,23 +942,26 @@
     </section>
     <section id="find-out-more">
       <div class="container">
-
-        <div class="col-xl-9">
-          <h4>Find Out More</h4>
-          <ul>
-            <li>Main Categories :</li>
-            <li><a href="">Accessories
-              </a></li>
-            <li><a href="">Adapters</a>
-            </li>
-            <li><a href="">Batteries</a></li>
-            <li><a href="">Webcams</a></li>
-            <li><a href="">Televisions</a></li>
-            <li><a href="">Projectors</a></li>
-            <li><a href="">Bags & Cases</a></li>
-            <li><a href="">Receivers</a></li>
-          </ul>
+        <div class="row">
+          <div class="col-xl-9  col-12">
+            <h4>Find Out More</h4>
+            <ul class="d-flex justify-content-lg-between " >
+              <li>Main Categories :</li>
+              <li><a href="">Accessories
+                </a></li>
+              <li><a href="">Adapters</a>
+              </li>
+              <li><a href="">Batteries</a></li>
+              <li><a href="">Webcams</a></li>
+              <li><a href="">Televisions</a></li>
+              <li><a href="">Projectors</a></li>
+              <li><a href="">Bags & Cases</a></li>
+              <li><a href="">Receivers</a></li>
+            </ul>
+          </div>
         </div>
+
+        
 
       </div>
     </section>
