basket fixing bug adn emtdiy cart div added

--- a/detail.html
+++ b/detail.html
@@ -92,49 +92,61 @@
           </div>
           <div class="col-xl-2 col-lg-2  col-md-4 svgs">
             <div class="svg-user">
-              <a href="login.html"><svg class="svgUser1" width="20" height="20" viewBox="0 0 32 32"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path d="m16 16a7 7 0 1 0 -7-7 7 7 0 0 0 7 7zm0-12a5 5 0 1 1 -5 5 5 5 0 0 1 5-5z"></path>
-                  <path
-                    d="m20 18h-8a9 9 0 0 0 -9 9 3 3 0 0 0 3 3h20a3 3 0 0 0 3-3 9 9 0 0 0 -9-9zm6 10h-20a1 1 0 0 1 -1-1 7 7 0 0 1 7-7h8a7 7 0 0 1 7 7 1 1 0 0 1 -1 1z">
-                  </path>
-                </svg></a>
-            </div>
-            <div class="svgCompare">
-              <svg class="svgCompare" width="20" height="20" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m26 9a1 1 0 0 0 0-2h-4a1 1 0 0 0 -1 1v4a1 1 0 0 0 2 0v-1.66a9 9 0 0 1 -7 14.66c-.3 0-.6 0-.9 0a1 1 0 1 0 -.2 2c.36 0 .73.05 1.1.05a11 11 0 0 0 8.48-18.05z">
-                </path>
-                <path
-                  d="m10 19a1 1 0 0 0 -1 1v1.66a9 9 0 0 1 8.8-14.48 1 1 0 0 0 .4-2 10.8 10.8 0 0 0 -2.2-.18 11 11 0 0 0 -8.48 18h-1.52a1 1 0 0 0 0 2h4a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1z">
-                </path>
-              </svg>
-              <div class="svg-Compare-span">
-                <span>0</span>
-              </div>
-            </div>
-            <div class="svgLove">
-              <svg class="svgLove" width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m29.55 6.509c-1.73-2.302-3.759-3.483-6.031-3.509h-.076c-3.29 0-6.124 2.469-7.443 3.84-1.32-1.371-4.153-3.84-7.444-3.84h-.075c-2.273.026-4.3 1.207-6.059 3.549a8.265 8.265 0 0 0 1.057 10.522l11.821 11.641a1 1 0 0 0 1.4 0l11.82-11.641a8.278 8.278 0 0 0 1.03-10.562zm-2.432 9.137-11.118 10.954-11.118-10.954a6.254 6.254 0 0 1 -.832-7.936c1.335-1.777 2.831-2.689 4.45-2.71h.058c3.48 0 6.627 3.924 6.658 3.964a1.037 1.037 0 0 0 1.57 0c.032-.04 3.2-4.052 6.716-3.964a5.723 5.723 0 0 1 4.421 2.67 6.265 6.265 0 0 1 -.805 7.976z">
-                </path>
-              </svg>
-              <div class="svg-Love-span">
-                <span>0</span>
-              </div>
-            </div>
+              <a href="login.html" class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
+                  data-bs-title="My Accaunt"><svg class="svgUser1" width="20" height="20"
+                      viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m16 16a7 7 0 1 0 -7-7 7 7 0 0 0 7 7zm0-12a5 5 0 1 1 -5 5 5 5 0 0 1 5-5z">
+                      </path>
+                      <path
+                          d="m20 18h-8a9 9 0 0 0 -9 9 3 3 0 0 0 3 3h20a3 3 0 0 0 3-3 9 9 0 0 0 -9-9zm6 10h-20a1 1 0 0 1 -1-1 7 7 0 0 1 7-7h8a7 7 0 0 1 7 7 1 1 0 0 1 -1 1z">
+                      </path>
+                  </svg></a>
 
-            <div class="shopBag">
-              <a href="cart.html"><svg class="shopBag" width="20" height="20" viewBox="0 0 32 32"
+          </div>
+          <div class="svgCompare">
+            <a href="" class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
+                data-bs-title="Compare">
+                <svg class="svgCompare" width="20" height="20" viewBox="0 0 30 30"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="m26 9a1 1 0 0 0 0-2h-4a1 1 0 0 0 -1 1v4a1 1 0 0 0 2 0v-1.66a9 9 0 0 1 -7 14.66c-.3 0-.6 0-.9 0a1 1 0 1 0 -.2 2c.36 0 .73.05 1.1.05a11 11 0 0 0 8.48-18.05z">
+                    </path>
+                    <path
+                        d="m10 19a1 1 0 0 0 -1 1v1.66a9 9 0 0 1 8.8-14.48 1 1 0 0 0 .4-2 10.8 10.8 0 0 0 -2.2-.18 11 11 0 0 0 -8.48 18h-1.52a1 1 0 0 0 0 2h4a1 1 0 0 0 1-1v-4a1 1 0 0 0 -1-1z">
+                    </path>
+                </svg>
+            </a>
+
+            <div class="svg-Compare-span">
+                <span>0</span>
+            </div>
+        </div>
+        <div class="svgLove">
+          <a href="" class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
+          data-bs-title="Wishlist" ><svg class="svgLove" width="20" height="20" viewBox="0 0 32 32"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
-                    d="m26 8.9a1 1 0 0 0 -1-.9h-3a6 6 0 0 0 -12 0h-3a1 1 0 0 0 -1 .9l-1.78 17.8a3 3 0 0 0 .78 2.3 3 3 0 0 0 2.22 1h17.57a3 3 0 0 0 2.21-1 3 3 0 0 0 .77-2.31zm-10-4.9a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4zm9.53 23.67a1 1 0 0 1 -.74.33h-17.58a1 1 0 0 1 -.74-.33 1 1 0 0 1 -.26-.77l1.7-16.9h2.09v3a1 1 0 0 0 2 0v-3h8v3a1 1 0 0 0 2 0v-3h2.09l1.7 16.9a1 1 0 0 1 -.26.77z">
+                      d="m29.55 6.509c-1.73-2.302-3.759-3.483-6.031-3.509h-.076c-3.29 0-6.124 2.469-7.443 3.84-1.32-1.371-4.153-3.84-7.444-3.84h-.075c-2.273.026-4.3 1.207-6.059 3.549a8.265 8.265 0 0 0 1.057 10.522l11.821 11.641a1 1 0 0 0 1.4 0l11.82-11.641a8.278 8.278 0 0 0 1.03-10.562zm-2.432 9.137-11.118 10.954-11.118-10.954a6.254 6.254 0 0 1 -.832-7.936c1.335-1.777 2.831-2.689 4.45-2.71h.058c3.48 0 6.627 3.924 6.658 3.964a1.037 1.037 0 0 0 1.57 0c.032-.04 3.2-4.052 6.716-3.964a5.723 5.723 0 0 1 4.421 2.67 6.265 6.265 0 0 1 -.805 7.976z">
                   </path>
-                </svg></a>
-              <div class="svg-shopBag-span">
-                <span id="basket-count">0</span>
-              </div>
-            </div>
+              </svg></a>
+
+          <div class="svg-Love-span">
+              <span>0</span>
+          </div>
+      </div>
+
+      <div class="shopBag">
+        <a  onmouseover="shovEmptydiv(event)" onmouseout="noshowemptydiv(event)" href="cart.html " class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
+        data-bs-title="Cart" "><svg class="shopBag" width="20" height="20" viewBox="0 0 32 32"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="m26 8.9a1 1 0 0 0 -1-.9h-3a6 6 0 0 0 -12 0h-3a1 1 0 0 0 -1 .9l-1.78 17.8a3 3 0 0 0 .78 2.3 3 3 0 0 0 2.22 1h17.57a3 3 0 0 0 2.21-1 3 3 0 0 0 .77-2.31zm-10-4.9a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4zm9.53 23.67a1 1 0 0 1 -.74.33h-17.58a1 1 0 0 1 -.74-.33 1 1 0 0 1 -.26-.77l1.7-16.9h2.09v3a1 1 0 0 0 2 0v-3h8v3a1 1 0 0 0 2 0v-3h2.09l1.7 16.9a1 1 0 0 1 -.26.77z">
+                </path>
+            </svg></a>
+        <div class="svg-shopBag-span">
+          <span id="basket-count" >0</span>
+        </div>
+    </div>
           </div>
         </div>
       </div>
@@ -497,8 +509,17 @@
 
       </div>
     </section>
+    <section onmouseover="shovEmptydiv(event)" onmouseout="noshowemptydiv(event)" id="mause-enter-div-cart" class="position-fixed " >
+      <div class="content ">
+        <h4>Your Cart</h4>
+      <p> no product in the cart</p>
+      <a href="shop.html"><button id="start-shoping" >START SHOPPING</button></a>
+      <button id="return-policy" >RUTURN POLICY</button>
+      </div>
+    </section>
   </header>
   <main>
+    <a  id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
     <section id="detail-shop">
       <div class="detail-shop">
         <h2>SHOP</h2>
@@ -1040,6 +1061,9 @@
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/jquery.nice-select.js"></script>
   <script src="assets/js/detail.js"></script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/tooltip.js"></script>
   <script src="assets/js/detail-api.js"></script>
   <script src="assets/js/main.js"></script>
   <script>
