--- a/login.html
+++ b/login.html
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="shopBag">
-                            <a href="cart.html " class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
+                            <a  onmouseover="shovEmptydiv(event)" onmouseout="noshowemptydiv(event)" href="cart.html " class="tooltip-use" data-bs-toggle="tooltip" data-bs-placement="top"
                             data-bs-title="Cart" "><svg class="shopBag" width="20" height="20" viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -144,7 +144,7 @@
                                     </path>
                                 </svg></a>
                             <div class="svg-shopBag-span">
-                                <span>0</span>
+                                <span id="basket-count" >0</span>
                             </div>
                         </div>
                     </div>
@@ -511,6 +511,14 @@
             </div>
         </section>
     </header>
+    <section onmouseover="shovEmptydiv(event)" onmouseout="noshowemptydiv(event)" id="mause-enter-div-cart" class="position-fixed " >
+        <div class="content ">
+          <h4>Your Cart</h4>
+        <p> no product in the cart</p>
+        <a href="shop.html"><button id="start-shoping" >START SHOPPING</button></a>
+        <button id="return-policy" >RUTURN POLICY</button>
+        </div>
+      </section>
     <main>
         <a id="go-to-up" href="#"><span><i class="fa-solid fa-arrow-up-long"></i></span></a>
         <section id="login-my-accaunt">
@@ -697,13 +705,7 @@
 
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        let btns = document.querySelectorAll(".tooltip-use");
-        for (const item of btns) {
-            new bootstrap.Tooltip(item);
-        }
-
-    </script>
+    <script src="assets/js/tooltip.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/jquery.nice-select.js"></script>
