--- a/index.html
+++ b/index.html
@@ -495,14 +495,10 @@
     <section   class="header-phone ">
       <div class="container-sm">
         <div class="row d-flex justify-content-between all-phone-header ">
-          <div class="col-5"><img src="assets/images/phone-header.png" alt=""></div>
+          <div class="col-5"><a href="index.html"><img src="assets/images/phone-header.png" alt=""></a></div>
           <div class="col-5 d-flex justify-content-end"><i   onclick="phoneSiderbarOpen(event)" class="fa-solid fa-bars"></i></div>
         </div>
       </div>
-
-
-
-
     </section>
     <section class="header-tablet">
 
@@ -544,13 +540,13 @@
           </div>
           <div class="contents-buttom">
             <ul>
-              <a href=""><li>HOME</li><i class="fa-solid fa-angle-down"></i></a>
+              <a href="index.html"><li>HOME</li><i class="fa-solid fa-angle-down"></i></a>
               <a href=""><li>CATEGORIES</li><i class="fa-solid fa-angle-down"></i></a>
-              <a href=""><li>SHOP</li><i class="fa-solid fa-angle-down"></i></a>
+              <a href="shop.html"><li>SHOP</li><i class="fa-solid fa-angle-down"></i></a>
               <a href=""><li>PAGES</li><i class="fa-solid fa-angle-down"></i></a>
               <a href=""><li>SPECIAL</li><i class="fa-solid fa-angle-down"></i></a>
               <a href=""><li>STORE LIST</li><i class="fa-solid fa-angle-down"></i></a>
-              <a href=""><li>CONTACT</li></a>
+              <a href="contact.html"><li>CONTACT</li></a>
             </ul>
           </div>
           <div class="social-medya">
